syntax = "proto3";

package EvoTicketing;

option csharp_namespace = "EvoTicketingGRPC";

import "google/protobuf/timestamp.proto";

service TicketingService {
    rpc Tickets (TicketRequest) returns (TicketResponse);
}

message TicketRequest {
    int32 ticket_id = 1;
}

message TicketResponse {
    repeated Ticket ticket = 1;
}

message Ticket {
    string ticket_id = 1;
    string ticket_code = 2;
    string issuer_name = 3;
    string occasion = 4;
    string benefeciary = 5;
    string price = 6; // e.g., "valid", "used", "expired"
    google.protobuf.Timestamp valid_until = 7;
}